@@ -18,6 +18,7 @@
 #   UDEBDIR      - directory for ready-to-use udebs (default: udebs)
 #   LOCALUDEBDIR - directory for locally provided udebs (default: localudebs)
 #   ONLINE       - update Packages files (default: y)
+#   CHECKMINVER  - check whether the specified package (singular) satisfies this minimal version
 
 set -e
 
@@ -170,6 +171,17 @@ if [ "$KERNELVERSION" ]; then
 		done
 	}
 	trap cleanup EXIT HUP INT QUIT TERM
+fi
+
+# Version check only, no fetching.
+if [ -n "$CHECKMINVER" ]; then
+	version=$(apt-cache show $PACKAGES | awk '/^Version:/ { print $2}')
+	if ! dpkg --compare-versions $version '>=' $CHECKMINVER; then
+		echo "E: Minimal version requirement not satisfied for $PACKAGES: $version >= $CHECKMINVER"
+		exit 1
+	else
+		exit 0
+	fi
 fi
 
 # Get udebs.
