@@ -7,6 +7,8 @@ debian-installer (20230523) UNRELEASED; urgency=medium
   [ Cyril Brulebois ]
   * Update translation-status for the release.
   * Fix colors in GRUB submenus for x86 netboot (Closes: #1036771).
+  * Add CHECK_MINIMAL_VERSION support, so that the release manager can
+    combine speedy uploads and peace of mind.
 
  -- Emanuele Rocca <ema@debian.org>  Tue, 23 May 2023 14:50:32 +0200
 
